# JiT

./: .gitignore  GEMINI.md  PROJECT_CONTEXT.md  alert.py  clean_checkpoints.sh  package-lock.json  pretrained_download.sh  pyproject.toml  run_octa_b.sh  run_octa_h.sh  test.sh
docs/: modifications_summary.md  paracondfilm_references.md  segmentation-plan.md  wavefix_references.md
notebooks/: dataset.ipynb  result.ipynb  tmp.ipynb  wavelet.ipynb
scripts/: calculate.py  make_average_results_table.py  multi_test.sh  progress.py  progress.sh  run_jit.sh  test.sh  utils.sh
src/: calc_model_stats.py  denoiser.py  engine_jit.py  inference_jit.py  main_jit.py  model_jit.py  model_jit_condimg.py
src/losses/: losses.py
src/models/: JiT.py  JiT_condimg.py  JiT_paracond.py  JiT_paracondfilm.py  JiT_paracondwave.py  JiT_paracondwavefix.py  __init__.py
tests/: README.md  TEST_RESULTS.md  run_tests.sh  test_dataset_isic.py  test_dataset_monu.py  test_dataset_octa.py  test_denoiser.py  test_metrics.py  test_model_jit.py
util/: isicdataset.py  misc.py  model_util.py  monudataset.py  octadataset.py  transforms.py
