[project]
name = "jit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autopep8>=2.3.2",
    "autorootcwd>=1.0.1",
    "einops>=0.8.2",
    "gdown>=5.2.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "opencv-python>=4.13.0.90",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "timm>=1.0.24",
    "torch==2.5.1",
    "torch-fidelity>=0.3.0",
    "torchvision==0.20.1",
]
